GET, POST and DELETE v1/models API
